# Torch

./: .gitignore
.github/workflows/: android_build.yml  linux_build.yml  mac_build.yml  release.yml  windows_build.yml
android/: README.md  build_android.bat  build_android.sh  copy_assets.bat  copy_starship_assets.bat  gradlew.bat  local.properties  settings.gradle  setup_android.bat
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/spaghetti/yamls/us/: royal_raceway_data.yml  royal_raceway_displaylists.yml
android/app/src/main/cpp/: CMakeLists.txt  torch_jni.cpp
android/app/src/main/java/com/torch/converter/: MainActivity.java
android/app/src/main/res/anim/: torch_dim_bright.xml
android/app/src/main/res/drawable/: ic_torch.xml  rounded_button.xml
android/app/src/main/res/layout/: activity_main.xml  custom_action_bar.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/: Companion.cpp  Companion.h
